# IMECurRust

./: Cargo.toml  IMECur.ini  README.md  VALIDATION.md  build.ps1  restore-cursor.cmd  restore-cursor.ps1
src/: assets.rs  config.rs  editability.rs  ime.rs  main.rs  win.rs
tools/: static_check.py
